--- a/ui/package.json
+++ b/ui/package.json
@@ -12,6 +12,8 @@
     "drizzle:pull": "npx drizzle-kit pull"
   },
   "dependencies": {
+    "@ai-sdk/openai": "^3.0.28",
+    "@ai-sdk/react": "3.0.86",
     "@hookform/resolvers": "^5.2.2",
     "@icons-pack/react-simple-icons": "^13.8.0",
     "@paralleldrive/cuid2": "^3.1.0",
@@ -28,12 +30,14 @@
     "@radix-ui/react-tooltip": "^1.2.8",
     "@t3-oss/env-nextjs": "^0.13.8",
     "@tailwindcss/typography": "^0.5.19",
+    "ai": "6.0.37",
     "better-auth": "^1.4.18",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dotenv": "^17.2.3",
     "drizzle-orm": "^0.44.6",
     "geist": "^1.5.1",
+    "katex": "^0.16.25",
     "lucide-react": "^0.546.0",
     "motion": "^12.23.24",
     "next": "16.1.6",
@@ -43,6 +47,7 @@
     "react-dom": "19.1.0",
     "react-hook-form": "^7.65.0",
     "sonner": "^2.0.7",
+    "streamdown": "^2.0.1",
     "tailwind-merge": "^3.3.1",
     "zod": "^4.1.12"
   },
